--- a/7 kyu/61.ipynb
+++ b/7 kyu/61.ipynb
@@ -57,6 +57,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elapsed_seconds(start, end):\n",
+    "    return (end - start).total_seconds()\n",
+    "#решение с кв"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
