--- a/6 kyu/23.ipynb
+++ b/6 kyu/23.ipynb
@@ -69,9 +69,9 @@
    "source": [
     "def find_missing_letter(chars):\n",
     "    n = 0\n",
-    "    while ord(chars[n]) == ord(chars[n+1]) - 1:\n",
-    "        n += 1\n",
-    "    return chr(1+ord(chars[n]))"
+    "    while ord(chars[n]) == ord(chars[n+1]) - 1: #пока нормер буквы в списке == след номеру буквы в списке - 1 (т.е. той же)\n",
+    "        n += 1 #следующая буква\n",
+    "    return chr(1+ord(chars[n])) #вернуть букву 1+номер текущей буквы"
    ]
   }
  ],
