--- a/5 kyu/9.ipynb
+++ b/5 kyu/9.ipynb
@@ -49,13 +49,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#решение с кв\n",
     "def domain_name(url):\n",
-    "    return url.split(\"//\")[-1].split(\"www.\")[-1].split(\".\")[0]"
+    "    return url.split(\"//\")[-1].split(\"www.\")[-1].split(\".\")[0]\n",
+    "#шаг 1- удалили 1 часть, шаг2 - удалили ввв, шаг3 - оставили все до точки"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'google'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "domain_name(\"http://google.co.jp\")"
    ]
   },
   {
