--- a/6 kyu/56.ipynb
+++ b/6 kyu/56.ipynb
@@ -55,12 +55,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def validate(n):\n",
-    "    pass"
+    "    n = list(map(int,str(n)))\n",
+    "    for index,digit in enumerate(n):\n",
+    "        if len(n)%2!=0:\n",
+    "            if index>0 and index%2!=0:\n",
+    "                if len(str(digit*2))>1:\n",
+    "                    n[index]=(digit*2)-9\n",
+    "                else:\n",
+    "                    n[index]=digit*2\n",
+    "                \n",
+    "        else:\n",
+    "            if index%2==0:\n",
+    "                if len(str(digit*2))>1:\n",
+    "                    n[index]=(digit*2)-9\n",
+    "                else:\n",
+    "                    n[index]=digit*2\n",
+    "    return sum(n)%10==0\n",
+    "#860ms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validate(1230)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate(n):\n",
+    "    digits = [int(x) for x in str(n)] #list\n",
+    "    even = [x*2 if x*2 <= 9 else x*2 - 9 for x in digits[-2::-2]] #тут меняет все нечетные в одну строку, ничего нового\n",
+    "    odd  = [x for x in digits[-1::-2]] #четные без изменений, всегда выбирает четные тк считает с конца\n",
+    "    return (sum(even + odd)%10) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validate(1230)"
    ]
   },
   {
