--- a/6 kyu/57.ipynb
+++ b/6 kyu/57.ipynb
@@ -44,12 +44,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def shift_char(i, n):\n",
+    "    cd = ord(i) + n\n",
+    "    if cd > ord('z'):\n",
+    "        cd = cd - ord('z') + ord('a') - 1\n",
+    "    elif cd < ord('A'):\n",
+    "        cd = cd + ord('z') - ord('a')\n",
+    "    return chr(cd)\n",
+    "\n",
     "def play_pass(s, n):\n",
-    "    pass"
+    "    res = ''\n",
+    "    for a,i in enumerate(s.lower()):\n",
+    "        if i.isalpha():\n",
+    "            if a % 2 == 0:\n",
+    "                res += shift_char(i, n).upper()\n",
+    "            else:\n",
+    "                res += shift_char(i, n).lower()\n",
+    "        elif i.isdigit():\n",
+    "            res+= str(9-int(i))\n",
+    "        else:\n",
+    "            res+= i\n",
+    "    return res[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4897 NkTrC Hq fT67 GjV Pq aP OqTh gOcE CoPcTi aO'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "play_pass(\"MY GRANMA CAME FROM NY ON THE 23RD OF APRIL 2015\", 2)"
    ]
   },
   {
