--- a/6 kyu/58.ipynb
+++ b/6 kyu/58.ipynb
@@ -37,12 +37,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "def longest_palindrome(a):\n",
-    "    pass"
+    "    if len(a)>1:\n",
+    "        res = []\n",
+    "        for start,i in enumerate(a):\n",
+    "            for end,y in enumerate(a):\n",
+    "                if a[start:end+1]==a[start:end+1][::-1]:\n",
+    "                    res.append(a[start:end+1])\n",
+    "        return len(max(res,key=len))\n",
+    "    else:\n",
+    "        return 0 if not a else 1\n",
+    "#1887ms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (longest_palindrome(\"baablkj12345432133d\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#с кв\n",
+    "def longest_palindrome (s):\n",
+    "    if not s: return 0\n",
+    "    substrings = [s[i:j] for i in range(0,len(s)) for j in range(i,len(s)+1)] #делает субстроки \n",
+    "    return max(len(s) for s in substrings if s == s[::-1]) #в принципе это то же самое все, но рабтает чуть быстрее\n",
+    "#Time: 1725ms"
    ]
   },
   {
