--- a/6 kyu/59.ipynb
+++ b/6 kyu/59.ipynb
@@ -47,12 +47,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_length_of_missing_array(array_of_arrays):\n",
-    "    pass"
+    "def get_length_of_missing_array(arr):\n",
+    "    if arr==[] or not arr:\n",
+    "        return 0\n",
+    "    res = []\n",
+    "    for i in sorted(arr,key=len):\n",
+    "        if i==[]:\n",
+    "            return 0\n",
+    "        res.append(i)\n",
+    "        if len(res)>1 and len(res[-1])!=len(res[-2])+1:\n",
+    "            return len(res[-1])-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_length_of_missing_array([[1, 2], [4, 5, 1, 1], [1], [5, 6, 7, 8, 9]])"
    ]
   },
   {
@@ -60,7 +88,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_length_of_missing_array(arrays):\n",
+    "    arrays = [len(a) if a is not None else 0 for a in arrays ]\n",
+    "    arrays.sort()\n",
+    "    if 0 in arrays or len(arrays) == 0 : return 0\n",
+    "    for i in range(len(arrays)):\n",
+    "        if arrays[i+1] != arrays[i] + 1: return arrays[i]+1"
+   ]
   }
  ],
  "metadata": {
