--- a/6 kyu/60.ipynb
+++ b/6 kyu/60.ipynb
@@ -44,12 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sum_consecutives(s):\n",
-    "    pass"
+    "    res = [[s[0]]]\n",
+    "    for i in s[1:]:\n",
+    "        if res[-1][0] != i:\n",
+    "            res.append([i])\n",
+    "        else:\n",
+    "            res[-1].append(i)\n",
+    "    return [sum(i) for i in res]"
    ]
   },
   {
@@ -57,7 +63,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import groupby\n",
+    "\n",
+    "def sum_consecutives(s):\n",
+    "    return [sum(group) for c, group in groupby(s)]"
+   ]
   }
  ],
  "metadata": {
