--- a/weekly challenges/4/5k.ipynb
+++ b/weekly challenges/4/5k.ipynb
@@ -64,10 +64,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test.describe('Example Tests')\n",
+    "# IterativeRotationCipher = {'encode':encode,'decode':decode}\n",
+    "# encode_examples = [\n",
+    "# \t[10,'If you wish to make an apple pie from scratch, you must first invent the universe.'],\n",
+    "# \t[14,'True evil is a mundane bureaucracy.'],\n",
+    "# \t[22,'There is nothing more atrociously cruel than an adored child.'],\n",
+    "# \t[36,'As I was going up the stair\\nI met a man who wasn\\'t there!\\nHe wasn\\'t there again today,\\nOh how I wish he\\'d go away!'],\n",
+    "# \t[29,'I avoid that bleak first hour of the working day during which my still sluggish senses and body make every chore a penance.\\nI find that in arriving later, the work which I do perform is of a much higher quality.']\n",
+    "# ]\n",
+    "# decode_examples = [\n",
+    "# \t'10 hu fmo a,ys vi utie mr snehn rni tvte .ysushou teI fwea pmapi apfrok rei tnocsclet',\n",
+    "# \t'14 daue ilev is a munbune Traurecracy.',\n",
+    "# \t'22 tareu oo iucnaTr dled oldthser.hg hiarm nhcn se rliyet oincoa',\n",
+    "# \t'36 ws h weA dgIaa ug owh n!asrit git \\n msm phw teaI\\'e tanantwhe reos\\ns ther! aHeae \\'gwadin\\nt haw n htoo ,I\\'i sy aohOy',\n",
+    "# \t'29 a r.lht niou gwryd aoshg gIsi mk lei adwhfci isd seensn rdohy mo kleie oltbyhes a\\naneu p.n rndr tehh irnne yifav t eo,raclhtc frpw IIti im gwkaidhv aicufh ima doea eruhi y io qshhcoa kr ef l btah gtrrse otnvugrt'\n",
+    "# ]\n",
+    "# for i,v in enumerate(encode_examples):\n",
+    "# \ttest.assert_equals(IterativeRotationCipher['encode'](v[0],v[1]),decode_examples[i])\n",
+    "# for i,v in enumerate(decode_examples):\n",
+    "# \ttest.assert_equals(IterativeRotationCipher['decode'](v),encode_examples[i][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def encode(n,strng):\n",
+    "\t#your code goes here. you can do it!\n",
+    "\tpass\n",
+    "\n",
+    "def decode(strng):\n",
+    "\t#your code goes here. you can do it!\n",
+    "\tpass"
+   ]
   }
  ],
  "metadata": {
