--- a/weekly challenges/4/6k.ipynb
+++ b/weekly challenges/4/6k.ipynb
@@ -27,6 +27,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test.describe(\"Sample tests\")\n",
+    "\n",
+    "# test.assert_equals(reverse_fizzbuzz(\"1 2 Fizz 4 Buzz\"), [1, 2, 3, 4, 5])\n",
+    "# test.assert_equals(reverse_fizzbuzz(\"Fizz 688 689 FizzBuzz\"), [687, 688, 689, 690])\n",
+    "# test.assert_equals(reverse_fizzbuzz(\"Fizz Buzz\"), [9, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fizzbuzz(n):\n",
+    "    return ['Fizz'*(not i%3) + 'Buzz'*(not i%5) or i for i in range(1, n+1)]\n",
+    "\n",
+    "def reverse_fizzbuzz(st):\n",
+    "    res = [int(i) if i.isdigit() else i for i in st.split()]\n",
+    "    length = len(res)\n",
+    "    lst = fizzbuzz(length)\n",
+    "    while lst[-len(res):]!=res:\n",
+    "        length+=1\n",
+    "        lst = fizzbuzz(length)\n",
+    "    return [i for i in range(length+1)][-len(res):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'Fizz', 4, 'Buzz', 'Fizz', 7, 8, 'Fizz', 'Buzz', 11, 'Fizz', 13, 14, 'FizzBuzz']\n",
+      "[687, 688, 689, 690]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = 15\n",
+    "print(fizzbuzz(test))\n",
+    "#print(reverse_fizzbuzz(' '.join(str(i) for i in fizzbuzz(test))))\n",
+    "print(reverse_fizzbuzz(\"Fizz 688 689 FizzBuzz\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
