--- a/weekly challenges/4/6k.ipynb
+++ b/weekly challenges/4/6k.ipynb
@@ -80,6 +80,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_fizzbuzz(st):\n",
+    "    res = [int(i) if i.isdigit() else i for i in st.split()]\n",
+    "    d = {'Fizz Buzz':[9,10],'Fizz':[3],'Buzz':[5],'Buzz Fizz':[5, 6],'FizzBuzz':[15]}\n",
+    "    for a,b in enumerate(res):\n",
+    "        if isinstance(b,int):\n",
+    "            print (b-a)\n",
+    "            return [i for i in range (b-a,b+len(res)-a)]\n",
+    "    return d[st]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(reverse_fizzbuzz(\"Fizz\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
