--- a/5 kyu/12.ipynb
+++ b/5 kyu/12.ipynb
@@ -42,13 +42,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def perimeter(n):\n",
-    "    # your code"
+    "    res = []\n",
+    "    a,b = 0,1\n",
+    "    while len(res)-1!=n+1:\n",
+    "        res.append(a)\n",
+    "        a, b = b, a+b\n",
+    "    return sum(i for i in res)*4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6002082144827584333104"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perimeter(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#с кв\n",
+    "def fib(n):\n",
+    "    a, b = 0, 1\n",
+    "\n",
+    "    for i in range(n+1):\n",
+    "        if i == 0:\n",
+    "            yield b \n",
+    "        else:\n",
+    "            a, b = b, a+b\n",
+    "            yield b\n",
+    "        \n",
+    "\n",
+    "def perimeter(n):\n",
+    "    return sum(fib(n)) * 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
