--- a/5 kyu/13.ipynb
+++ b/5 kyu/13.ipynb
@@ -44,13 +44,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "def increment_string(strng):\n",
-    "    return strng"
+    "    if strng=='' or not strng[-1].isdigit():\n",
+    "        return strng+'1'\n",
+    "    num = ''\n",
+    "    for i in strng[::-1]:\n",
+    "        if not i.isdigit():\n",
+    "            break\n",
+    "        else:\n",
+    "            num+=i\n",
+    "    res = str(int(num[::-1])+1)\n",
+    "    if len(num)>len(res):\n",
+    "        res = '0'*(len(num)-len(res))+res\n",
+    "    return strng[:-len(num)]+res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'foo002'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "increment_string(\"foo001\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def increment_string(strng):\n",
+    "    head = strng.rstrip('0123456789')\n",
+    "    tail = strng[len(head):]\n",
+    "    if tail == \"\": return strng+\"1\" #все ясно, смарт стрип\n",
+    "    return head + str(int(tail) + 1).zfill(len(tail)) #теперь я знаю про zfill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0056'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str('56').zfill(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
