--- a/weekly challenges/4/5k.ipynb
+++ b/weekly challenges/4/5k.ipynb
@@ -92,18 +92,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encode(n,strng):\n",
-    "\t#your code goes here. you can do it!\n",
-    "\tpass\n",
+    "    for cycle in range (n):\n",
+    "        res = []\n",
+    "        test = strng.replace(' ','')\n",
+    "        test = test[-n:]+test[:-n]\n",
+    "        for a,b in enumerate(strng):\n",
+    "            if b==' ':\n",
+    "                test = test[:a]+' '+test[a:]\n",
+    "        for i in test.split():\n",
+    "            filler = i\n",
+    "            for x in range(n):\n",
+    "                filler = filler[-1]+filler[:-1]\n",
+    "            res.append(filler)\n",
+    "        strng = ' '.join(res)\n",
+    "    return strng\n",
     "\n",
     "def decode(strng):\n",
-    "\t#your code goes here. you can do it!\n",
-    "\tpass"
+    "    strng = strng.split(\" \")\n",
+    "    n = int(strng[0])\n",
+    "    strng = \" \".join(strng[1:])\n",
+    "    space_pos = [i for i in range(len(strng)) if strng[i] == \" \"] #we can do this here since the space positions dont change\n",
+    "    \n",
+    "    for j in range(n):\n",
+    "        strng = strng.split(\" \")\n",
+    "        #step 1 - shift all substrings left\n",
+    "        for i in range(len(strng)):\n",
+    "            if len(strng[i]) != 0 and n % len(strng[i]) != 0:\n",
+    "                shft = n % len(strng[i])\n",
+    "                strng[i] = strng[i][shft:] + strng[i][0:shft]\n",
+    "\n",
+    "        #step 2 - generate string without spaces\n",
+    "        strng = \"\".join(strng)\n",
+    "        \n",
+    "        #step 3 - left shift\n",
+    "        strng = strng[n:] + strng[0:n]\n",
+    "        strng = list(strng)\n",
+    "\n",
+    "        #step 4 - put back spaces\n",
+    "        for i in range(len(space_pos)):\n",
+    "            strng.insert(space_pos[i], chr(32))\n",
+    "        strng = \"\".join(strng)    \n",
+    "        \n",
+    "    return(strng)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ma rie topp su h,mc ut rcyni srt tfin vesshnee eio wurt vIisu fh.yma aon lakpteeof'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encode (10,'If you wish to make an apple pie from scratch, you must first invent the universe.')\n",
+    "decode ('10 eu vni seer .I oufy wi shtom eak apan frplepie som atcr ch,yo ustfum sir htinventt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1 — remove all spaces:\n",
+    "# 'Ifyouwishtomakeanapplepiefromscratch,youmustfirstinventtheuniverse.'\n",
+    "\n",
+    "# Step 2 — shift the order of string characters to the right by 10:\n",
+    "# 'euniverse.Ifyouwishtomakeanapplepiefromscratch,youmustfirstinventth'\n",
+    "\n",
+    "# Step 3 — place the spaces back in their original positions:\n",
+    "# 'eu niv erse .I fyou wi shtom ake anap plepiefr oms crat ch,yo umustf irs tinventth'\n",
+    "\n",
+    "# Step 4 — shift the order of characters for each space-separated substring to the right by 10:\n",
+    "# 'eu vni seer .I oufy wi shtom eak apan frplepie som atcr ch,yo ustfum sir htinventt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "htinventt\n",
+      "thtinvent\n",
+      "tthtinven\n",
+      "ntthtinve\n",
+      "entthtinv\n",
+      "ventthtin\n",
+      "nventthti\n",
+      "inventtht\n",
+      "tinventth\n",
+      "htinventt\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'htinventt'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 'tinventth'\n",
+    "for i in range(10):\n",
+    "    a = a[-1]+a[:-1]\n",
+    "    print(a)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
