--- a/6 kyu/66.ipynb
+++ b/6 kyu/66.ipynb
@@ -11,6 +11,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_reverse(data):\n",
+    "    res = []\n",
+    "    for i in range(int(len(data)/8)):\n",
+    "        res.extend(data[-8:])\n",
+    "        data = data[:-8]\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_reverse([0,0,1,1,0,1,1,0,0,0,1,0,1,0,0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [0,0,1,1,0,1,1,0, #8 0,0,1,0,1,0,0,1] - ввод\n",
+    "# [0,0,1,0,1,0,0,1, #8 0,0,1,1,0,1,1,0] - вывод"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_reverse(inp):\n",
+    "    out = []\n",
+    "    while inp:\n",
+    "        out = inp[0:8] + out\n",
+    "        inp = inp[8:]\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_reverse([0,0,1,1,0,1,1,0,0,0,1,0,1,0,0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_reverse(data):\n",
+    "    res = []\n",
+    "  \n",
+    "    for i in range(len(data)-8, -1, -8):\n",
+    "        print(i)\n",
+    "        res.extend(data[i:i+8])\n",
+    "  \n",
+    "    return res\n",
+    "#сначала берет длину -8, затем делает один шаг и отнимает от длины 8, до тех пор пока не будет значение 2 аргумента -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_reverse([0,0,1,1,0,1,1,0,0,0,1,0,1,0,0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "40\n",
+      "30\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(50,10,-10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
