--- a/6 kyu/64.ipynb
+++ b/6 kyu/64.ipynb
@@ -11,10 +11,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse(data):\n",
+    "    value = 0\n",
+    "    res = []\n",
+    "    for i in data:\n",
+    "        if i=='i':\n",
+    "            value += 1\n",
+    "        elif i=='d':\n",
+    "            value -= 1\n",
+    "        elif i=='s':\n",
+    "            value = value**2\n",
+    "        elif i=='o':\n",
+    "            res.append(value)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse(data):\n",
+    "    value = 0\n",
+    "    res=[]\n",
+    "    for c in data:\n",
+    "        if c==\"i\": value+=1\n",
+    "        elif c==\"d\": value-=1\n",
+    "        elif c==\"s\": value*=value\n",
+    "        elif c==\"o\": res.append(value)\n",
+    "    return res"
+   ]
   }
  ],
  "metadata": {
