--- a/6 kyu/61.ipynb
+++ b/6 kyu/61.ipynb
@@ -11,10 +11,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prefill(n,v='undefined'):\n",
+    "    if n is None:\n",
+    "        return 'None is invalid'\n",
+    "    try:\n",
+    "        return [v for i in range(int(n))]\n",
+    "    except:\n",
+    "        return n + ' is invalid'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def prefill(n=0,v=None):\n",
+    "    try:\n",
+    "        return [v] * int(n)\n",
+    "    except:\n",
+    "        raise TypeError(str(n) + ' is invalid')"
+   ]
   }
  ],
  "metadata": {
