--- a/6 kyu/62.ipynb
+++ b/6 kyu/62.ipynb
@@ -11,6 +11,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math as m\n",
+    "def fold_array(array, runs):\n",
+    "    for i in range(runs):\n",
+    "        if len(array)==1:\n",
+    "            return array\n",
+    "        end = array[-(len(array)//2):][::-1]\n",
+    "        array = array[:m.ceil(len(array)/2)]\n",
+    "        for a,b in enumerate(end):\n",
+    "            array[a]=array[a]+b\n",
+    "    return array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#реш с кв\n",
+    "def fold_array(array, runs):\n",
+    "    worker = array[:] #сделал дубликат\n",
+    "    for r in range(runs):\n",
+    "        for i in range(len(worker)/2): #проходится по всем элементам 1 части\n",
+    "            worker[i] += worker.pop() #к каждому индексу прибавляет последнее число pop\n",
+    "    return worker\n",
+    "#да, это было смарт, нужно ведь было всего-то последнее число каждый раз забирать..."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
