--- a/6 kyu/68.ipynb
+++ b/6 kyu/68.ipynb
@@ -39,7 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def kebabize(s):\n",
+    "    return re.sub('\\B([A-Z])', r'-\\1', re.sub('\\d', '', s)).lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +60,7 @@
        "'camel-toe-style'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
