--- a/5 kyu/Common Denominators.ipynb
+++ b/5 kyu/Common Denominators.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[2, 1], [3, 1], [4, 1]]"
+       "[[6, 12], [4, 12], [3, 12]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,32 +39,11 @@
     "        den.append(i[1])\n",
     "        tms.append(i[0])\n",
     "    denom = reduce(lcm, den, 1)\n",
-    "    return [[,denom] for a,b in zip(den,tms)]\n",
+    "    return [[denom//a*b,denom] for a,b in zip(den,tms)]\n",
     "\n",
-    "convertFracts([[1, 2], [1, 3], [1, 4]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 1] [2, 3, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [[1, 2], [1, 3], [1, 4]]\n",
-    "ls1 = []\n",
-    "ls2 = []\n",
-    "for i in a:\n",
-    "    ls1.append(i[0])\n",
-    "    ls2.append(i[1])\n",
-    "print (ls1,ls2)\n"
+    "convertFracts([[1, 2], [1, 3], [1, 4]])\n",
+    "\n",
+    "# 908 ms"
    ]
   },
   {
@@ -72,7 +51,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# решение с кв, 840 ms\n",
+    "\n",
+    "from fractions import gcd\n",
+    "\n",
+    "def convertFracts(lst):\n",
+    "    D = 1\n",
+    "    for _,d in lst:\n",
+    "        D*= d//gcd(d,D) # общ множ умножает на: второе число//общий множ(второе число/общ множ). \n",
+    "        #т.е. если нужно D больше, ты его получишь\n",
+    "    return [[D*n//d,D] for n,d in lst]"
+   ]
   }
  ],
  "metadata": {
